# minecorrosion

./: .env  Cargo.toml
example_json/: fabric-0.17.3-1.21.10.json
libminecorrosion/: Cargo.toml  scratchfile.sql
libminecorrosion/src/: download_and_verify.rs  lib.rs  models.rs  schema.rs
libminecorrosion/src/configuration_parse/: download_assets.rs  download_executables.rs  main.rs  mod.rs  runtime_variables.rs
libminecorrosion/src/configure/: assets.rs  game_slash_jvm.rs  libraries.rs  mod.rs  shared.rs
libminecorrosion/src/database/: build_instance.rs  build_key_value_table.rs  build_table.rs  mod.rs  shared.rs
libminecorrosion/src/downloader/: main.rs
libminecorrosion/src/instance_handler/: main.rs
libminecorrosion/src/launch/: main.rs
migrations/2025-12-27-032048-0000_instances/: down.sql  up.sql
minecmd/: Cargo.toml
minecmd/src/: main.rs
src/: schema.rs
